lilypond_1_4
============
* configure: Regenerate.

* aclocal.m4: Add --enable/disable-optimising option.

* scripts/lilypond-book.py: fix by Mats. Try to import pre if available.

* scripts/lilypond-book.py (re_dict): remove all *? regexps.

* Documentation/windows/setup.hint (requires): Add gsview dependency.

* Documentation/windows/installing.texi: Suggest gswin32c (console
program) for getting the version.  Layout fixes.

* Documentation/user/tutorial.itely (Running LilyPond): Backport
windows doco fix.
	
* Documentation/windows/gs-profile.sh:
* Documentation/windows/gsview-profile.sh: Remove.

* lilypond-indent.el: New file, from HEAD.  Fixes lilypond-mode.

1.4.12.uu1
==========

* Make Timing_engraver instantiatable, add to Score_performer. Fixes bar checks
in MIDI


1.4.12.af1
==========

* Debian patches.


1.4.12.jcn1
===========

* Documentation/topdocs/INSTALL.texi: Add section for MacOS X.

* darwin.patch: New file.

1.4.12
======

1.4.11.uu1
==========

* Backport from 1.5: pitched rest. Syntax a4\rest

* Backport from 1.5: on-the-fly polyphony. See reference manual.

* Backport from 1.5: bugfix with overlapping bars and span-bars.

1.4.10.uu1
==========

* pktrace for makefile, spec, etc.

* fresh/used translator bugfix (backport from 1.5)

* rest-collision fix (backport from 1.5)

1.4.10.jcn2
===========

* Documentation/windows/compiling.texi: Update.

* Documentation/index.texi: Add link to orphaned compiling for
  windows page.

* stepmake/bin/add-html-footer.py: Python2.[12] re workarounds.

* Documentation/footer.html.in: Comment fix.

* po: regenerate.

* lilypond-1.4.10/midi2ly/lilypond-stream.cc (header): Add xgettext
helper comment.

* stepmake/bin: backport from 1.5

* Documentation/windows/installing.texi:
* Documentation/windows/compiling.texi: Update for Cygwin's teTeX.

* Documentation/windows/gs-profile.sh: previously lily-gs.sh

1.4.10
======

1.4.9.uu2
=========

* drum-pitch updates

* Bugfix in German Chords (thanks Rune)
