@@ -62,7 +62,7 @@ except ImportError:
 
 program_version = '@TOPLEVEL_VERSION@'
 if program_version == '@' + 'TOPLEVEL_VERSION' + '@':
-	program_version = '1.5.53'
+	program_version = '1.4.12'
 
 # if set, LILYPONDPREFIX must take prevalence
 # if datadir is not set, we're doing a build and LILYPONDPREFIX 
@@ -152,7 +152,131 @@ class LatexPaper:
 		self.m_papersize = 'letterpaper'
 		self.m_fontsize = 10
 		self.m_num_cols = 1
-		self.m_
+		self.m_landscape = 0
+		self.m_geo_landscape = 0
+		self.m_geo_width = None
+		self.m_geo_textwidth = None
+		self.m_geo_lmargin = None
+		self.m_geo_rmargin = None
+		self.m_geo_includemp = None
+		self.m_geo_marginparwidth = {10: 57, 11: 50, 12: 35}
+		self.m_geo_marginparsep = {10: 11, 11: 10, 12: 10}
+		self.m_geo_x_marginparwidth = None
+		self.m_geo_x_marginparsep = None
+		self.__body = None
+	def set_geo_option(self, name, value):
+
+		if type(value) == type([]):
+			value = map(conv_dimen_to_float, value)
+		else:
+			value = conv_dimen_to_float(value)
+
+		if name == 'body' or name == 'text':
+			if type(value) == type([]):
+				self.m_geo_textwidth =  value[0]
+			else:
+				self.m_geo_textwidth =  value
+			self.__body = 1
+		elif name == 'portrait':
+			self.m_geo_landscape = 0
+		elif name == 'reversemp' or name == 'reversemarginpar':
+			if self.m_geo_includemp == None:
+				self.m_geo_includemp = 1
+		elif name == 'marginparwidth' or name == 'marginpar':
+			self.m_geo_x_marginparwidth =  value
+			self.m_geo_includemp = 1
+		elif name == 'marginparsep':
+			self.m_geo_x_marginparsep =  value
+			self.m_geo_includemp = 1
+		elif name == 'scale':
+			if type(value) == type([]):
+				self.m_geo_width = self.get_paperwidth() * value[0]
+			else:
+				self.m_geo_width = self.get_paperwidth() * value
+		elif name == 'hscale':
+			self.m_geo_width = self.get_paperwidth() * value
+		elif name == 'left' or name == 'lmargin':
+			self.m_geo_lmargin =  value
+		elif name == 'right' or name == 'rmargin':
+			self.m_geo_rmargin =  value
+		elif name == 'hdivide' or name == 'divide':
+			if value[0] not in ('*', ''):
+				self.m_geo_lmargin =  value[0]
+			if value[1] not in ('*', ''):
+				self.m_geo_width =  value[1]
+			if value[2] not in ('*', ''):
+				self.m_geo_rmargin =  value[2]
+		elif name == 'hmargin':
+			if type(value) == type([]):
+				self.m_geo_lmargin =  value[0]
+				self.m_geo_rmargin =  value[1]
+			else:
+				self.m_geo_lmargin =  value
+				self.m_geo_rmargin =  value
+		elif name == 'margin':#ugh there is a bug about this option in
+					# the geometry documentation
+			if type(value) == type([]):
+				self.m_geo_lmargin =  value[0]
+				self.m_geo_rmargin =  value[0]
+			else:
+				self.m_geo_lmargin =  value
+				self.m_geo_rmargin =  value
+		elif name == 'total':
+			if type(value) == type([]):
+				self.m_geo_width =  value[0]
+			else:
+				self.m_geo_width =  value
+		elif name == 'width' or name == 'totalwidth':
+			self.m_geo_width =  value
+		elif name == 'paper' or name == 'papername':
+			self.m_papersize = value
+		elif name[-5:] == 'paper':
+			self.m_papersize = name
+		else:
+                       	pass 
+
+	def __setattr__(self, name, value):
+		if type(value) == type("") and \
+		   dimension_conversion_dict.has_key (value[-2:]):
+			f = dimension_conversion_dict[value[-2:]]
+			self.__dict__[name] = f(float(value[:-2]))
+		else:
+			self.__dict__[name] = value
+			
+	def __str__(self):
+		s =  "LatexPaper:\n-----------"
+		for v in self.__dict__.keys():
+			if v[:2] == 'm_':
+				s = s +  str (v) + ' ' + str (self.__dict__[v])
+		s = s +  "-----------"
+		return s
+	
+	def get_linewidth(self):
+		w = self._calc_linewidth()
+		if self.m_num_cols == 2:
+			return (w - 10) / 2
+		else:
+			return w
+	def get_paperwidth(self):
+		#if self.m_use_geometry:
+			return self.m_paperdef[self.m_papersize][self.m_landscape or self.m_geo_landscape]
+		#return self.m_paperdef[self.m_papersize][self.m_landscape]
+	
+	def _calc_linewidth(self):
+		# since geometry sometimes ignores 'includemp', this is
+		# more complicated than it should be
+		mp = 0
+		if self.m_geo_includemp:
+			if self.m_geo_x_marginparsep is not None:
+				mp = mp + self.m_geo_x_marginparsep
+			else:
+				mp = mp + self.m_geo_marginparsep[self.m_fontsize]
+			if self.m_geo_x_marginparwidth is not None:
+				mp = mp + self.m_geo_x_marginparwidth
+			else:
+				mp = mp + self.m_geo_marginparwidth[self.m_fontsize]
+
+		#ugh test if this is necessary				
 		if self.__body:
 			mp = 0
 
@@ -228,6 +352,23 @@ dimension_conversion_dict ={
 	'pt': pt2pt
 	}
 
+# Convert numeric values, with or without specific dimension, to floats.
+# Keep other strings
+def conv_dimen_to_float(value):
+	if type(value) == type(""):
+		m = re.match ("([0-9.]+)(cm|in|pt|mm|em|ex)",value)
+		if m:
+			unit = m.group (2)
+			num = string.atof(m.group (1))
+			conv =  dimension_conversion_dict[m.group(2)]
+			
+			value = conv(num)
+	 	
+		elif re.match ("^[0-9.]+$",value):
+			value = float(value)
+
+	return value
+			
 	
 # latex linewidths:
 # indices are no. of columns, papersize,  fontsize
@@ -285,11 +426,15 @@ output_dict= {
 %s
 \end{lilypond}
 """,
-		'output-verbatim': "\\begin{verbatim}%s\\end{verbatim}",
+		'output-verbatim': r'''\begin{verbatim}%s\end{verbatim}%%
+''',
 		'output-default-post': "\\def\postLilypondExample{}\n",
 		'output-default-pre': "\\def\preLilypondExample{}\n",
 		'usepackage-graphics': '\\usepackage{graphics}\n',
 		'output-eps': '\\noindent\\parbox{\\lilypondepswidth{%(fn)s.eps}}{\includegraphics{%(fn)s.eps}}',
+		'output-noinline': r'''
+%% generated: %(fn)s.eps
+''',
 		'output-tex': '{\\preLilypondExample \\input %(fn)s.tex \\postLilypondExample\n}',
 		'pagebreak': r'\pagebreak',
 		},
@@ -304,6 +449,9 @@ output_dict= {
 		  'output-lilypond-fragment': """@lilypond[%s]
 \context Staff\context Voice{ %s }
 @end lilypond """,
+		  'output-noinline': r'''
+@c generated: %(fn)s.png		  
+''',
 		  'pagebreak': None,
 		  'output-verbatim': r"""@example
 %s
@@ -449,6 +597,8 @@ def compose_full_body (body, opts):
 	Add stuff to BODY using OPTS as options."""
 	music_size = default_music_fontsize
 	latex_size = default_text_fontsize
+	indent = ''
+	linewidth = ''
 	for o in opts:
 		if g_force_lilypond_fontsize:
 			music_size = g_force_lilypond_fontsize
@@ -460,6 +610,16 @@ def compose_full_body (body, opts):
 		m = re.match ('latexfontsize=([0-9]+)pt', o)
 		if m:
 			latex_size = string.atoi (m.group (1))
+			
+		m = re.match ('indent=([-.0-9]+)(cm|in|mm|pt)', o)
+		if m:
+			f = float (m.group (1))
+			indent = 'indent = %f\\%s' % (f, m.group (2))
+			
+		m = re.match ('linewidth=([-.0-9]+)(cm|in|mm|pt)', o)
+		if m:
+			f = float (m.group (1))
+			linewidth = 'linewidth = %f\\%s' % (f, m.group (2))
 
 	if re.search ('\\\\score', body):
 		is_fragment = 0
@@ -472,10 +632,15 @@ def compose_full_body (body, opts):
 
 	if is_fragment and not 'multiline' in opts:
 		opts.append('singleline')
+		
 	if 'singleline' in opts:
-		l = -1.0;
-	else:
-		l = __main__.paperguru.get_linewidth()
+		linewidth = 'linewidth = -1.0'
+	elif not linewidth:
+		l = __main__.paperguru.get_linewidth ()
+		linewidth = 'linewidth = %f\pt' % l
+
+	if 'noindent' in opts:
+		indent = 'indent = 0.0\mm'
 
 	for o in opts:
 		m= re.search ('relative(.*)', o)
@@ -496,20 +661,23 @@ def compose_full_body (body, opts):
 			body = '\\relative %s { %s }' %(pitch, body)
 	
 	if is_fragment:
-		body = r"""\score { 
+		body = r'''\score { 
  \notes { %s }
   \paper { }  
-}""" % body
+}''' % body
 
 	opts = uniq (opts)
 	optstring = string.join (opts, ' ')
 	optstring = re.sub ('\n', ' ', optstring)
-	body = r"""
+	body = r'''
 %% Generated automatically by: lilypond-book.py
 %% options are %s  
 \include "paper%d.ly"
-\paper  { linewidth = %f \pt } 
-""" % (optstring, music_size, l) + body
+\paper  {
+  %s
+  %s
+} 
+''' % (optstring, music_size, linewidth, indent) + body
 
 	# ughUGH not original options
 	return body
@@ -845,7 +1013,10 @@ def schedule_lilypond_block (chunk):
 		m = re.search ('intertext="(.*?)"', o)
 		if m:
 			newbody = newbody  + m.group (1) + "\n\n"
-	if format == 'latex':
+	
+	if 'noinline' in opts:
+		s = 'output-noinline'
+	elif format == 'latex':
 		if 'eps' in opts:
 			s = 'output-eps'
 		else:
